packages/aku/src/test-utils/source/__fixtures__/errors/parent-export.ts
import { BaseClass } from "../../../../utils.ts";

export class ParentExport extends BaseClass {}
